Update to use Java 9+ modularity